월드맵 마우스 우클릭 이동

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,5 +1,3 @@
-
-
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Developers/lhb02/WorldMap.WorldMap
 EditorStartupMap=/Game/Developers/lhb02/WorldMap.WorldMap
@@ -67,4 +65,7 @@ bReportStats=False
 ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
+
+[/Script/NavigationSystem.RecastNavMesh]
+RuntimeGeneration=Dynamic
 
