Clear Folder,Setting Shop and motel

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -68,4 +68,6 @@ ManualIPAddress=
 
 [/Script/NavigationSystem.RecastNavMesh]
 RuntimeGeneration=Dynamic
+CellSize=10.000000
+CellHeight=55.000000
 
