--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -44,6 +44,7 @@ r.ReflectionMethod=0
 r.Shadow.Virtual.Enable=1
 r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=True
 r.AllowOcclusionQueries=True
+r.DefaultFeature.AutoExposure=False
 
 [/Script/WorldPartitionEditor.WorldPartitionEditorSettings]
 CommandletClass=Class'/Script/UnrealEd.WorldPartitionConvertCommandlet'
