Create Sound Assets

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -73,3 +73,6 @@ RuntimeGeneration=Dynamic
 CellSize=10.000000
 CellHeight=55.000000
 
+[/Script/Engine.AudioSettings]
+DefaultBaseSoundMix=/Game/UI/Sound/MasterMix.MasterMix
+
