--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -5,17 +5,17 @@ ProjectID=061716F946E4F18EFA2CD595DE860E42
 
 [/Script/UnrealEd.ProjectPackagingSettings]
 Build=IfProjectHasCode
-BuildConfiguration=PPBC_Development
+BuildConfiguration=PPBC_Shipping
 BuildTarget=
 LaunchOnTarget=
-StagingDirectory=(Path="C:/Users/lhb02/OneDrive/Documents/Unreal Projects/Journey/Journey")
-FullRebuild=False
-ForDistribution=False
+StagingDirectory=(Path="C:/Users/lhb02/OneDrive/바탕 화면")
+FullRebuild=True
+ForDistribution=True
 IncludeDebugFiles=False
 BlueprintNativizationMethod=Disabled
 bIncludeNativizedAssetsInProjectGeneration=False
 bExcludeMonolithicEngineHeadersInNativizedCode=False
-UsePakFile=True
+UsePakFile=False
 bUseIoStore=True
 bUseZenStore=False
 bMakeBinaryConfig=False
