Edit Sound area

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -74,5 +74,7 @@ CellSize=10.000000
 CellHeight=55.000000
 
 [/Script/Engine.AudioSettings]
-DefaultBaseSoundMix=/Game/UI/Sound/MasterMix.MasterMix
+DefaultBaseSoundMix=None
+DefaultSoundClassName=/Engine/EngineSounds/Master.Master
+DefaultMediaSoundClassName=None
 
