--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -15,7 +15,7 @@ IncludeDebugFiles=False
 BlueprintNativizationMethod=Disabled
 bIncludeNativizedAssetsInProjectGeneration=False
 bExcludeMonolithicEngineHeadersInNativizedCode=False
-UsePakFile=False
+UsePakFile=True
 bUseIoStore=True
 bUseZenStore=False
 bMakeBinaryConfig=False
