--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Level/WorldMap1.WorldMap1
-EditorStartupMap=/Game/Level/WorldMap1.WorldMap1
+GameDefaultMap=/Game/Level/Main.Main
+EditorStartupMap=/Game/Level/Main.Main
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
