add battle field modeling

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Level/Main.Main
-EditorStartupMap=/Game/Level/Main.Main
+GameDefaultMap=/Game/Level/MainmenuLevel.MainmenuLevel
+EditorStartupMap=/Game/Level/MainmenuLevel.MainmenuLevel
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
