싱글톤 버그 수정/배틀 몬스터 수정

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Level/MainmenuLevel.MainmenuLevel
-EditorStartupMap=/Game/Level/MainmenuLevel.MainmenuLevel
+GameDefaultMap=/Game/Level/Main.Main
+EditorStartupMap=/Game/Level/Main.Main
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
