--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -86,6 +86,8 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="MouseWheelUp",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=MouseScrollUp)
 +ActionMappings=(ActionName="MouseWheelDown",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=MouseScrollDown)
 +ActionMappings=(ActionName="MouseWheelClick",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=MiddleMouseButton)
++ActionMappings=(ActionName="GoToMinimap",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=M)
++ActionMappings=(ActionName="GoToWorld",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=N)
 +AxisMappings=(AxisName="Look Up / Down Gamepad",Scale=1.000000,Key=Gamepad_RightY)
 +AxisMappings=(AxisName="Look Up",Scale=-1.000000,Key=MouseY)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=Gamepad_LeftY)
