--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -88,6 +88,7 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="MouseWheelClick",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=MiddleMouseButton)
 +ActionMappings=(ActionName="GoToMinimap",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=M)
 +ActionMappings=(ActionName="GoToWorld",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=N)
++ActionMappings=(ActionName="OpenWorldUI",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=U)
 +AxisMappings=(AxisName="Look Up / Down Gamepad",Scale=1.000000,Key=Gamepad_RightY)
 +AxisMappings=(AxisName="Look Up",Scale=-1.000000,Key=MouseY)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=Gamepad_LeftY)
