--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -89,6 +89,8 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="GoToMinimap",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=M)
 +ActionMappings=(ActionName="GoToWorld",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=N)
 +ActionMappings=(ActionName="OpenMinimap",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Tab)
++ActionMappings=(ActionName="OpenWorldUI",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=U)
++ActionMappings=(ActionName="OpenHeroesUI",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=I)
 +AxisMappings=(AxisName="Look Up / Down Gamepad",Scale=1.000000,Key=Gamepad_RightY)
 +AxisMappings=(AxisName="Look Up",Scale=-1.000000,Key=MouseY)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=Gamepad_LeftY)
