--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -91,6 +91,7 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="OpenMinimap",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftShift)
 +ActionMappings=(ActionName="OpenWorldUI",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=U)
 +ActionMappings=(ActionName="OpenHeroesUI",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=I)
++ActionMappings=(ActionName="OpenUpgradeUI",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=K)
 +AxisMappings=(AxisName="Look Up / Down Gamepad",Scale=1.000000,Key=Gamepad_RightY)
 +AxisMappings=(AxisName="Look Up",Scale=-1.000000,Key=MouseY)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=Gamepad_LeftY)
